--- a/main.css
+++ b/main.css
@@ -4,7 +4,8 @@ body {
 }
 
 nav {
-  /* height: 8vh; */
+  opacity: 1;
+  background: black;
 }
 
 .main-container {
@@ -16,20 +17,62 @@ nav {
   100% {opacity: 1;}
 }
 
+@keyframes glowing {
+  0% { text-shadow: 0 0 -10px lightgoldenrodyellow; }
+  40% { text-shadow: 0 0 20px lightgoldenrodyellow; }
+  60% { text-shadow: 0 0 20px lightgoldenrodyellow; }
+  100% { text-shadow: 0 0 -10px lightgoldenrodyellow; }
+}
+
+@keyframes fadeInLeft {
+   0% {
+      opacity: 0;
+      transform: translateX(-.5em);
+   }
+   100% {
+      opacity: 1;
+      transform: translateX(0);
+   }
+}
+
+@keyframes float1 {
+	0% {
+		transform: translatey(.1em);
+	}
+	50% {
+		transform: translatey(-.1em);
+	}
+	100% {
+		transform: translatey(.1em);
+	}
+}
+
+@keyframes float2 {
+	0% {
+		transform: translatey(-.1em);
+	}
+	50% {
+		transform: translatey(.1em);
+	}
+	100% {
+		transform: translatey(-.1em);
+	}
+}
+
+
+
 div .left-profile {
   min-height: 100vh;
+  background-color: black;
   background-image: url(./docs/profile-bg.jpg);
   background-size: 50em;
   background-position: right;
-  /* background-color: rgb(34, 34, 34);
-  border-right: 1px solid lightcyan;
-  border-bottom: 1px solid lightcyan; */
 }
 
 div .right-projects {
   min-height: 100vh;
   background-image: url(./docs/projects-bg.jpeg);
-  /* background-repeat: no-repeat; */
+  background-color: rgb(255, 197, 149);
   background-size: auto;
 }
 
@@ -44,9 +87,13 @@ fas fa-download {
 }
 
 .contact {
-  animation: fade .8s linear;
+  animation: fadeInLeft .8s linear;
   border-radius: 20px;
   font-size: .8em;
+}
+
+.list-group-item {
+  animation: fadeInLeft .8s linear;
 }
 
 .contact .icons {
@@ -75,6 +122,10 @@ fas fa-download {
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 15px;
+}
+
+.languages i {
+  animation: glowing 5000ms ease-in-out infinite;
 }
 
 .languages i:hover {
@@ -133,4 +184,30 @@ div .sect {
   margin-top: 8vh;
   height: 92vh;
   overflow-y: auto;
+}
+
+/* Hover.css */
+
+.hvr-icon-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-icon-grow .hvr-icon {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-icon-grow:hover .hvr-icon, .hvr-icon-grow:focus .hvr-icon, .hvr-icon-grow:active .hvr-icon {
+  -webkit-transform: scale(1.3) translateZ(0);
+  transform: scale(1.3) translateZ(0);
 }
