--- a/main.css
+++ b/main.css
@@ -35,32 +35,6 @@ nav {
    }
 }
 
-@keyframes float1 {
-	0% {
-		transform: translatey(.1em);
-	}
-	50% {
-		transform: translatey(-.1em);
-	}
-	100% {
-		transform: translatey(.1em);
-	}
-}
-
-@keyframes float2 {
-	0% {
-		transform: translatey(-.1em);
-	}
-	50% {
-		transform: translatey(.1em);
-	}
-	100% {
-		transform: translatey(-.1em);
-	}
-}
-
-
-
 div .left-profile {
   min-height: 100vh;
   background-color: black;
@@ -167,6 +141,7 @@ div .projects {
 }
 
 div .sect {
+  animation: fade .8s linear;
   color: white;
   background-color: rgba(36, 36, 36, 0.25);
   margin: 0 2em 0 2em;
