--- a/main.css
+++ b/main.css
@@ -104,8 +104,36 @@ color: grey;
   border-radius: 15px;
 }
 
-.languages i {
-  animation: glowing 5000ms ease-in-out infinite;
+.languages i.fa-database {
+  animation: glowing 6800ms ease-in-out infinite;
+}
+
+.languages i.fa-python {
+  animation: glowing 6500ms ease-in-out infinite;
+}
+
+.languages i.fa-gem {
+  animation: glowing 4200ms ease-in-out infinite;
+}
+
+.languages i.fa-css3-alt {
+  animation: glowing 5500ms ease-in-out infinite;
+}
+
+.languages i.fa-html5 {
+  animation: glowing 5700ms ease-in-out infinite;
+}
+
+.languages i.fa-node-js {
+  animation: glowing 6000ms ease-in-out infinite;
+}
+
+.languages i.fa-react {
+  animation: glowing 4700ms ease-in-out infinite;
+}
+
+.languages i.fa-js-square {
+  animation: glowing 7000ms ease-in-out infinite;
 }
 
 .languages i:hover {
